--- a/src/ChatBox.css
+++ b/src/ChatBox.css
@@ -32,8 +32,10 @@
 }
 
 .chat-header {
+  position: relative;
+  top: 10px;
   text-align: center;
-  margin-bottom: 11px;
+  margin-bottom: 17px;
   font-size: 1.2rem;
   font-weight: bold;
   color: var(--text);
