--- a/src/ChatBox.css
+++ b/src/ChatBox.css
@@ -11,6 +11,10 @@
   --highlight: #007bff;    /* Button highlight */
 }
 
+body {
+  background: var(--dark1);
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -24,7 +28,6 @@
   max-width: 600px;
   padding: 20px;
   background: var(--dark);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
   font-family: sans-serif;
@@ -32,10 +35,8 @@
 }
 
 .chat-header {
-  position: relative;
-  top: 10px;
   text-align: center;
-  margin-bottom: 17px;
+  margin: 45px 0 7px 0;
   font-size: 1.2rem;
   font-weight: bold;
   color: var(--text);
