--- a/src/AuthPage.css
+++ b/src/AuthPage.css
@@ -11,6 +11,15 @@
     --error-color: #e74c3c;
 }
 
+.fullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
 .auth-container {
     display: flex;
     justify-content: center;
